fix too long segment data with scroll bar and tiny shadow uwu

--- a/src/map-app/src/styles/style.css
+++ b/src/map-app/src/styles/style.css
@@ -80,6 +80,8 @@ body {
 .mobileInfo {
   background-color: rgb(255, 255, 255);
   width: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   z-index: 6;
@@ -87,6 +89,7 @@ body {
   position: absolute;
   top: 0px;
   left: 0px;
+  box-shadow: 0 4px 4px 0 rgb(0,0,0,0.5);
 }
 
 .app .snow_tab {
